docs: ends the implementation of swagger documentation
