# internal/handler/roothandler/root.go
@@ -27,7 +27,7 @@ func NewHandler(l logger.Logger) Handler {
 // @Description  Retorna status da API
 // @Tags         health
 // @Produce      json
-// @Success      200  {object}  dto.DefaultMessageResponse
+// @Success      200  {object}  dto.DefaultMessageResponse  "API funcionando"
 // @Router       / [get]
 func (h *handler) Root(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
